# garmin-training

./: .env.example  .gitignore  README.md  com.raihan.garmin-sync.plist  pyproject.toml
.streamlit/: config.toml
deploy/: com.user.garmin-sync.plist  launchd.plist
export/: activities.csv  daily.csv  plan.csv  race_predictions.csv  samples.csv
garmin/: __main__.py  analysis.py  cli.py  client.py  config.py  dashboard.py  database.py  export.py  ics.py  mcp.py  models.py  parse.py  plan.py  sync.py  workout.py
plans/: madeira25k.json
