[project]
name = "garmin"
version = "0.1.0"
description = "Sync Garmin Connect activities and training metrics into local SQLite."
requires-python = ">=3.14"
dependencies = [
    "garminconnect>=0.3.6",
    "mcp>=1.28.1",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0",
    "streamlit>=1.58.0",
    "typer>=0.26.8",
]

[project.scripts]
garmin = "garmin.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["garmin"]

[dependency-groups]
dev = [
    "mypy>=1.11",
    "ruff>=0.6",
]

[tool.mypy]
python_version = "3.14"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "garminconnect.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["streamlit.*", "plotly.*", "pandas.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "garmin.dashboard"
disallow_untyped_calls = false
warn_return_any = false

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
